Prevent footer from cutting off main content globally

--- a/css/custom/custom-other.less
+++ b/css/custom/custom-other.less
@@ -313,6 +313,9 @@ ul.vert-center {   // For centering text within ul li
 		}
 	}
 }
+.main > .row:last-of-type {
+	padding-bottom: 50px;
+}
 
 .img-sm,
 .figure-sm {
